# user-api

./: .dockerignore  .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  Rocket.toml
.github/workflows/: archiver-api-build.yml  test.yml  user-api-build.yml
migrations/2019-09-26-232218_create_users/: down.sql  up.sql
scripts/ci/: format.sh
src/: lib.rs  main.rs  responses.rs
src/auth/: authentication.rs
src/db/: mod.rs  schema.rs  user.rs
