[package]
name = "user-api"
version = "0.1.0"
authors = ["nhyne <nhyne@nhyne.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web server
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json", "uuid"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

jsonwebtoken = "5.0.1"

# database
# For some reason sometimes diesel will not be happy with the uuid feature.
#   If this happens check the versions installed (0.6.x needed).
#   If the proper version is installed then remove the feature, build, then put it back and build.
diesel = { version = "1.4.0", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.9.0"

# data types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6.5", features = ["serde", "v4"] }
openssl = "*"

# other
rand = "0.7"
scrypt = "0.2"
regex = "1.3.1"
